<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.westga.cs6242.bullsandcows.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Title"
        android:textColor="#593001"
        android:textSize="45sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/softbtn"
        android:onClick="click_Start"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/Start"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/softbtn"
        android:onClick="click_Exit"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/Exit"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>
